Fixed spacing on Editing page and disclaimer now shows entered email.

--- a/src/style/pgs/services/editing.less
+++ b/src/style/pgs/services/editing.less
@@ -393,7 +393,6 @@ form#inputRowsCont {
 	div#disclaimerCont {
 		width:23rem;
 		margin:auto;
-		margin-top:2.5rem;
 		font-size:0.95rem;
 
 		fieldset {
